# CppCore

./: .gitattributes  .gitignore  BUILDING.md  CppCore.pfx  CppCore.sln  LICENSE.md  Makefile  README.md  select-clang.sh
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  build-osx.yml  build-wasi.yml  build-win.yml  debug-ci.yml  verify-ci.yml
include/CppCore/: Application.h  BitOps.h  Block.h  Buffer.h  CPUID.h  Encoding.h  Flags.h  FlexInt.h  Iterator.h  Logger.h  Memory.h  PreprocessorLoop.h  RTCMemory.h  Random.h  Resources.h  Root.h  Stopwatch.h  String.h  StringUtil.h  System.h  Ticker.h  Uuid.h  Version.h
include/CppCore.Interface.C/: Crypto.h  HMAC.h  Hash.h  Primes.h  cppcore.h
include/CppCore.Test/: BitOps.h  Buffer.h  Encoding.h  Memory.h  Precompiled.h  Random.h  Root.h  String.h  Uuid.h
src/CppCore.Benchmark/: main.cpp  vectors.cpp  vectors.h
src/CppCore.Debug/: Resources.rc  app.icns  main.cpp
src/CppCore.Interface.Python/: .gitignore  aes.py  basex.py  clib.py  primes.py  pyproject.toml  setup.py  test_aes.py  test_basex.py  test_primes.py
src/CppCore.Interface.Python/cppcore/: .gitignore  CppCore.Interface.C.dylib  __init__.py  aes.py  arithmetic.py  basex.py  dh.py  hash.py  hmac.py  pbkdf2.py  primes.py
src/CppCore.Interface.Python/cppcore/lib/: libcppcore.dylib  libcppcore.py
src/CppCore.Interface.Python/cppcore/util/: maxint.py
src/CppCore.Interface.Python/tests/: test_aes.py  test_arithmetic.py  test_basex.py  test_dh.py  test_hash.py  test_hmac.py  test_pbkdf2.py  test_primes.py
src/CppCore.Test/: Test.cpp  (+3 more)
(+115 files in other folders)
